fix scroll-x on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    max-width: 100%;
     margin: 0;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     background-color: #333333;
@@ -195,6 +196,11 @@ main {
         border-left: none;
         border-bottom: none;
         border-right: none;
+        transform: translateX(-100%);
+    }
+
+    .popup-animation {
+        transform: translateX(0);
     }
 
     .list {
